Criadointernacionalização conforme locale utilizado.

--- a/src/main/webapp/WEB-INF/message_en_US.properties
+++ b/src/main/webapp/WEB-INF/message_en_US.properties
@@ -6,15 +6,15 @@ typeMismatch= O tipo de dado foi inválido
 typeMismatch.produto.numeros= Digite um valor válida. Ex: "123"
 
 navegacao.categoria.home = Home
-navegacao.categoria.agile = Agilidade
+navegacao.categoria.agile = Agile
 navegacao.categoria.front_end = Front End
-navegacao.categoria.games = Jogos
+navegacao.categoria.games = Games
 navegacao.categoria.java = Java
 navegacao.categoria.mobile = Mobile
 navegacao.categoria.web = Web
-navegacao.categoria.others = Outros
+navegacao.categoria.others = Others
 
-menu.carrinho = Seu Carrinho ({0})
-menu.sobre = Sobre Nós
+menu.carrinho = Cart ({0})
+menu.sobre = About Us
 menu.pt = Portugues
 menu.en = English
