Cria mensagens para utilização da internacionalização segundo locale.

--- a/src/main/webapp/WEB-INF/message_en_US.properties
+++ b/src/main/webapp/WEB-INF/message_en_US.properties
@@ -16,5 +16,15 @@ navegacao.categoria.others = Others
 
 menu.carrinho = Cart ({0})
 menu.sobre = About Us
+menu.questions = Common Questions
+menu.sair = LogOff
 menu.pt = Portugues
 menu.en = English
+
+body.home.sales = Last days with promotional prices. Enjoy!
+body.home.differentials = House Code Differentials
+body.home.buy = Buy
+
+body.cart.yourCart = Your Cart
+body.cart.otherBooks = Do you already know the other books of the Code House?
+body.cart.publish = See all books we publish! 
