--- a/src/main/webapp/WEB-INF/message_pt.properties
+++ b/src/main/webapp/WEB-INF/message_pt.properties
@@ -16,5 +16,15 @@ navegacao.categoria.others = Outros
 
 menu.carrinho = Seu Carrinho ({0})
 menu.sobre = Sobre Nós
+menu.questions = Perguntas Frequentes
+menu.sair = Sair
 menu.pt = Portugues
 menu.en = English
+
+body.home.sales = Últimos dias com os preços promocionais. Aproveite!
+body.home.differentials = Diferenciais da Casa do Código
+body.home.buy = Compre
+
+body.cart.yourCart = Seu Carrinho de Compras
+body.cart.otherBooks = Você já conhece os outros livros da Casa do Código?
+body.cart.publish = Veja todos os livros que publicamos! 
